Add "get voxelius" footers to all voxelius devlogs

--- a/content/2024-12-14.voxelius-devlog.md
+++ b/content/2024-12-14.voxelius-devlog.md
@@ -39,3 +39,7 @@ much. It’s not like I want a Luanti clone;
 * Liquids, I guess? I’d really like to try my hand at doing this;  
 * Actual good surface feature generation; I really want to do that. These
 pillars are getting annoying;  
+
+## Get Voxelius
+ 
+* [Source](https://github.com/untolabs/voxelius)  
