--- a/content/2024-12-16.voxelius-devlog.md
+++ b/content/2024-12-16.voxelius-devlog.md
@@ -29,3 +29,7 @@ throughout server restarts;
 which is any kind of voxel change;  
 
 ![](2024-12-16.voxelius-devlog/353546187294.png)  
+
+## Get Voxelius
+ 
+* [Source](https://github.com/untolabs/voxelius)  
