Add 2024-12-26.voxelius-server-tutorial.md - Corrected markdown posts to use a single line per paragraph because I   finally set up Visual Studio Code to wrap words correctly for markdown

--- a/content/2023-08-30.crontab-automation.md
+++ b/content/2023-08-30.crontab-automation.md
@@ -1,6 +1,6 @@
 title: Automating things without systemd
 description: Making things run in the background without root access
-tags: automation
+tags: automation, tutorial
 date: 2023-08-30
 
 This year I ran into a peculiar problem: how does one daemonze a process without using any `systemd` related utilities (user services also won't work because SSH sessions are not considered real sessions); the reasoning behind this bizarre problem is the way the VPS owner shares it's usage between other people (letting people `sudo` around doesn't look like a good idea)  
