--- a/content/2024-04-28.source-fov-unlock.md
+++ b/content/2024-04-28.source-fov-unlock.md
@@ -1,6 +1,6 @@
 title: Unlocking FOV in Source games
 description: I shall therefore spam TF2 developers with this post
-tags: development, source-sdk
+tags: development, tutorial, source-sdk
 date: 2024-04-28
 
 This post consists of human-readable explanation of two commits I made into Refraction mod's GitHub repository in 2022:  
