--- a/content/2024-09-16.minecraft-systemd.md
+++ b/content/2024-09-16.minecraft-systemd.md
@@ -1,6 +1,6 @@
 title: How does my Minecraft SMP work
 description: A how-to guide on setting up a Java Edition server
-tags: automation, minecraft
+tags: automation, tutorial, minecraft
 date: 2024-09-16
 
 > **NOTE:** This tutorial expects you to know your basics of working with a remote Linux server via [SSH](https://letmegooglethat.com/?q=ssh+tutorial) and most importantly have a remote server to SSH into; I also expect you to be mentally capable to deal with both systemd and java antics.  
