--- a/content/2024-11-02.self-hosting.md
+++ b/content/2024-11-02.self-hosting.md
@@ -1,6 +1,6 @@
 title: Self-hosting a website with Nginx
 description: As it turns out using industry-standard software is better
-tags: automation
+tags: automation, tutorial
 date: 2024-11-02
 
 GitHub Pages CDN seems to work slower compared to Cloudflare's caching thing, so I kind of decided to self-host again, this time without trying to make the entire configuration file myself. Also I wanted to try using a different HTTP server and thus decided to go with [nginx](https://nginx.org/en/) this time.
