--- a/content/2024-12-14.voxelius-devlog.md
+++ b/content/2024-12-14.voxelius-devlog.md
@@ -4,41 +4,27 @@ tags: development, voxelius
 date: 2024-12-14
 
 ## General changes
-* New versioning scheme. Public tests now specify last two digits of the year
-and week number in the tweak version. So this new release is version 0.0.1 with
-a public test for week 50 of year 2024;  
-* Experimental single-player support; new C++ API for managing an SP session
-has been also implemented for all the GUI things that might want the player to
-join or leave a game world;  
+* New versioning scheme. Public tests now specify last two digits of the year and week number in the tweak version. So this new release is version 0.0.1 with a public test for week 50 of year 2024;  
+* Experimental single-player support; new C++ API for managing an SP session has been also implemented for all the GUI things that might want the player to join or leave a game world;  
 
 ## Protocol improvements
 * Protocol V9 no longer has a server password field in the Login Request packet;  
-* The aforementioned Login Request packet’s fields are now used in full; both
-client and server validate their VDef2 (voxel registry) integrity;  
+* The aforementioned Login Request packet’s fields are now used in full; both client and server validate their VDef2 (voxel registry) integrity;  
 
 ## New voxels
-* Glass. That’s it; it is rendered semi-correctly now. Specifically for glass,
-I added a special option to disable depth-sorting chunk meshes that might speed
-things up on lower-end machines by sacrificing cross-chunk visibility of
-blending voxels;  
+* Glass. That’s it; it is rendered semi-correctly now. Specifically for glass, I added a special option to disable depth-sorting chunk meshes that  might speed things up on lower-end machines by sacrificing cross-chunk visibility of blending voxels;  
 
 ![](2024-12-14.voxelius-devlog/iGCy6o.png)  
 
 ![](2024-12-14.voxelius-devlog/yWxxX.png)  
 
 ## Notes for nerds
-* The game’s source code and CMake scripts have been re-done to utilize
-precompiled headers; this single-handedly sped build times up to five times the
-previous speed. The entire project (WITH ALL THE DEPENDENCIES including
-FetchContent’ed GLFW) takes about 41 seconds to build!  
+* The game’s source code and CMake scripts have been re-done to utilize precompiled headers; this single-handedly sped build times up to five times the previous speed. The entire project (WITH ALL THE DEPENDENCIES including FetchContent’ed GLFW) takes about 41 seconds to build!  
 
 ## What's next
-* Lua support, I guess? I’d love to have at least some interactivity in the
-console and support for some plugins that don’t mess with the game itself too
-much. It’s not like I want a Luanti clone;  
+* Lua support, I guess? I’d love to have at least some interactivity in the console and support for some plugins that don’t mess with the game itself too much. It’s not like I want a Luanti clone;  
 * Liquids, I guess? I’d really like to try my hand at doing this;  
-* Actual good surface feature generation; I really want to do that. These
-pillars are getting annoying;  
+* Actual good surface feature generation; I really want to do that. These pillars are getting annoying;  
 
 ## Get Voxelius
  
