--- a/content/2024-12-16.voxelius-devlog.md
+++ b/content/2024-12-16.voxelius-devlog.md
@@ -4,29 +4,19 @@ tags: development, voxelius
 date: 2024-12-16
 
 ## Bug fixes
-* Fixed single-player sessions failing to generate new chunks after pressing
-"cancel" while connecting to an unreachable remote server (thanks PQCraft);  
-* General fixes and improvements related to the source code tree and shared
-game code;  
+* Fixed single-player sessions failing to generate new chunks after pressing "cancel" while connecting to an unreachable remote server (thanks PQCraft);  
+* General fixes and improvements related to the source code tree and shared game code;  
 
 ## Networking
-* Protocol version number has been bumped to 10; all servers currently running
-on an older version of the game are recommended to be updated to 0.0.1.2451;  
-* Added a new network packet sent by clients to request a chunk to be
-transmitted to them; subsequently the entire visibility check system has been
-implemented to support this specific packet;  
+* Protocol version number has been bumped to 10; all servers currently running on an older version of the game are recommended to be updated to 0.0.1.2451;  
+* Added a new network packet sent by clients to request a chunk to be transmitted to them; subsequently the entire visibility check system has been implemented to support this specific packet;  
 
 ## Rendering
-* Both client and server now load worlds much faster because there is no longer
-a period of time at which the game just chews through chunks to generate; now
-all the chunks are generated on-demand which should drastically improve loading
-and rendering performance;  
+* Both client and server now load worlds much faster because there is no longer a period of time at which the game just chews through chunks to generate; now all the chunks are generated on-demand which should drastically improve loading and rendering performance;  
 
 ## World
-* Introduced a simple chunk storage format to make player activity persistent
-throughout server restarts;  
-* The world chunks are only saved if there has been player activity in them
-which is any kind of voxel change;  
+* Introduced a simple chunk storage format to make player activity persistent throughout server restarts;  
+* The world chunks are only saved if there has been player activity in them which is any kind of voxel change;  
 
 ![](2024-12-16.voxelius-devlog/353546187294.png)  
 
