--- a/content/2024-12-14.voxelius-devlog.md
+++ b/content/2024-12-14.voxelius-devlog.md
@@ -1,4 +1,4 @@
-title: Voxelius devlog for (0.0.1.2450)
+title: Voxelius devlog (0.0.1.2450)
 description: A bunch of quality-of-life changes
 tags: development, voxelius
 date: 2024-12-14
