--- a/content/2024-12-16.voxelius-devlog.md
+++ b/content/2024-12-16.voxelius-devlog.md
@@ -1,4 +1,4 @@
-title: Voxelius devlog for (0.0.1.2451)
+title: Voxelius devlog (0.0.1.2451)
 description: All the progress for the 51st week of 2024
 tags: development, voxelius
 date: 2024-12-16
