--- a/content/2024-12-25.voxelius-devlog.md
+++ b/content/2024-12-25.voxelius-devlog.md
@@ -1,4 +1,4 @@
-title: Voxelius devlog for (0.0.1.2453)
+title: Voxelius devlog (0.0.1.2453)
 description: A very voxel Christmas
 tags: development, voxelius
 date: 2024-12-25
@@ -87,5 +87,5 @@ if(auto image = resource::load<Image>("textures/gui/window_icon.png")) {
 
 ## Get Voxelius
 
-* [Release](https://github.com/untolabs/voxelius/releases/tag/0.0.1.2453)  
+* [Binary](https://github.com/untolabs/voxelius/releases/tag/0.0.1.2453)  
 * [Source](https://github.com/untolabs/voxelius)  
