More popwallers I guess

--- a/content/2024-06-15.wallpaper.md
+++ b/content/2024-06-15.wallpaper.md
@@ -1,4 +1,4 @@
-title: Wallpaper post: clutter_4K_R2.png
+title: Walpaper dump: june of 2024
 description: A bisexually-lit fever dream of a CGI tea party
 tags: wallpaper, blender
 date: 2024-06-15
@@ -8,5 +8,3 @@ date: 2024-06-15
 Originally posted in Discord, there was a newer version that is now lost media. I also managed to recover a blender [project](2024-06-15.wallpaper/WP0.blend) with a semi-comprehensive version of the wallpaper; versions might differ and the project file may be messed up in newer versions of blender!!!  
 
 [![](2024-06-15.wallpaper/clutter-web.jpg)](2024-06-15.wallpaper/clutter_4K_R2.png)  
-
-* The image is click-able, but if it isn't, here's an another [link](2024-06-15.wallpaper/clutter_4K_R2.png)  
