--- a/content/posts/2024-11-02.self-hosting.md
+++ b/content/posts/2024-11-02.self-hosting.md
@@ -12,15 +12,15 @@ It's a wild west, I got my domain from a Russian registrar, you may get your dom
 ## Getting a server
 I keep shilling [HostVDS](https://hostvds.com/?affiliate_uuid=35e44a9e-ac36-4858-bc36-a1ad0566d695) because they offer good pricing for that server hardware they provide. The cheapest plan they provide is called `hostvds-1` and it costs $0.99/month plus an additional cost for a dedicated IPv4 address (they give out one free IPv4 address per user, the next ones cost $0.60/month).  
 
-![](2024-11-02.self-hosting/2024-11-02_13-16.png)  
+![](posts/2024-11-02.self-hosting/2024-11-02_13-16.png)  
 
 They also offer a number of locations you're free to choose depending on where you expect most users to view your website from. I personally chose Helsinki because it's one of the best locations to connect from literal middle of Russia.  
 
-![](2024-11-02.self-hosting/2024-11-02_13-23.png)  
+![](posts/2024-11-02.self-hosting/2024-11-02_13-23.png)  
 
 Oh and also they accept Russian payment methods, which is, like the only way I can get a remote server hosted outside of the country in the forseeable future. I have no clue on what's the legal status of them doing this (you know, sanctions and all that) but I sure hope they keep accepting Russian cards.  
 
-![](2024-11-02.self-hosting/2024-11-02_13-24.png)  
+![](posts/2024-11-02.self-hosting/2024-11-02_13-24.png)  
 
 
 ## Initial setup
@@ -93,7 +93,7 @@ I'm using Cloudflare to manage my domain, which allows hiding the origin server'
 
 The complete setup should look something like this:  
 
-![](2024-11-02.self-hosting/2024-11-02_14-04.png)  
+![](posts/2024-11-02.self-hosting/2024-11-02_14-04.png)  
 
 
 ## Directory setup
@@ -182,4 +182,4 @@ systemctl restart nginx
 ## The result
 After all that, navigate to your site in the web browser. If everything goes right, you should be able to see the contents of a test file you've created:  
 
-![](2024-11-02.self-hosting/2024-11-02_14-30.png)
+![](posts/2024-11-02.self-hosting/2024-11-02_14-30.png)
