--- a/content/posts/2024-12-14.voxelius-devlog.md
+++ b/content/posts/2024-12-14.voxelius-devlog.md
@@ -14,9 +14,9 @@ date: 2024-12-14
 ## New voxels
 * Glass. That’s it; it is rendered semi-correctly now. Specifically for glass, I added a special option to disable depth-sorting chunk meshes that  might speed things up on lower-end machines by sacrificing cross-chunk visibility of blending voxels;  
 
-![](2024-12-14.voxelius-devlog/iGCy6o.png)  
+![](posts/2024-12-14.voxelius-devlog/iGCy6o.png)  
 
-![](2024-12-14.voxelius-devlog/yWxxX.png)  
+![](posts/2024-12-14.voxelius-devlog/yWxxX.png)  
 
 ## Notes for nerds
 * The game’s source code and CMake scripts have been re-done to utilize precompiled headers; this single-handedly sped build times up to five times the previous speed. The entire project (WITH ALL THE DEPENDENCIES including FetchContent’ed GLFW) takes about 41 seconds to build!  
