--- a/content/posts/2024-12-26.voxelius-server-tutorial.md
+++ b/content/posts/2024-12-26.voxelius-server-tutorial.md
@@ -41,7 +41,7 @@ $ cd /opt/voxelius
 ## Downloading binaries
 On a desktop, navigate to [https://github.com/untolabs/voxelius/releases](https://github.com/untolabs/voxelius/releases) and go to the latest available release, then copy the download link for a zip archive that ends with your preferred platform and CPU architecture
 
-![](2024-12-26.voxelius-server-tutorial/screenshot-release.png)  
+![](posts/2024-12-26.voxelius-server-tutorial/screenshot-release.png)  
 
 Then, on the server, navigate to `/opt/voxelius/` and download your chosen binary release archive (_NOTE:_ this requires `wget` to be installed, and if it isn't, please ensure to install it with your system's package manager)  
 
