--- a/content/posts/2025-02-07.spite-linux-install.md
+++ b/content/posts/2025-02-07.spite-linux-install.md
@@ -5,7 +5,7 @@ date: 2025-02-07
 
 Back in the summer I got a software development job. Said job requires you to at least have Windows on office machines because the entire project is initially developed targeting AMD64 Windows and Visual C++ environment. Eventually, I got kind of tired using remote desktop software to connect to the office computer to work in case I got sick or was unable to show up, so I caved and installed Windows 10 on my laptop... to only then snap half a year later and go back to Linux out of spite.  
 
-![](2025-02-07.spite-linux-install/windows-meme.png)  
+![](posts/2025-02-07.spite-linux-install/windows-meme.png)  
 
 > **NOTE:** This is a _very subjective_ and _rant-filled_ review of what I did and didn't like about Windows and why I'd never ever put this wretched system on my own computer ever again.  
 
@@ -16,14 +16,14 @@ After the initial "honeymoon period" of playing games on Windows that I wouldn't
 
 In fact,  here's a screenshot of my Steam profile. All these games run **PERFECTLY FINE** natively on Linux. Yep!  
 
-![](2025-02-07.spite-linux-install/steam-games.png)  
+![](posts/2025-02-07.spite-linux-install/steam-games.png)  
 
 ## Software development
 Using Visual Studio (the purple logo one, not the community one) went fine only for either a joke program that BSODs your system with a 1/6 chance (we literally called it the Russian Roulette program) or for the actual work. Every other project has been developed in VSCode, just like on Linux.  
 
 Both classic command prompt and PowerShell absolutely suck. The first thing I did on a fresh install was to download Git and use their Windows port of bash for the rest of the time Windows ran on my laptop. In fact, I do the exact same thing on my work machine:  
 
-![](2025-02-07.spite-linux-install/git-bash.png)
+![](posts/2025-02-07.spite-linux-install/git-bash.png)
 
 Besides an absolute lack of standard build tools that I got used to whilst living inside POSIX environments, there is no tools to operate with FAT32 images as files on Windows: you can't make a GPT partition table inside an image binary, you can't format a filesystem inside that image, you can't copy files to that filesystem on that image. I wasn't able to mess around with my hobby osdev project because of that!  
 
