--- a/content/posts/2025-03-23.voxelius-devlog.md
+++ b/content/posts/2025-03-23.voxelius-devlog.md
@@ -14,20 +14,20 @@ I decided against supporting single-player at all. Especially because Voxelius a
 ## Feature generation
 After like what? Three months? Yeah... The game now generates nice trees around the world that have absolutely nothing in common with a bigger voxel game made by good people but owned by Microsoft.  
 
-![1742630607197260.png](2025-03-23.voxelius-devlog/1742630607197260.png)  
+![1742630607197260.png](posts/2025-03-23.voxelius-devlog/1742630607197260.png)  
 
-![1742630931920062.png](2025-03-23.voxelius-devlog/1742630931920062.png)  
+![1742630931920062.png](posts/2025-03-23.voxelius-devlog/1742630931920062.png)  
 
 ## New title card
 Because I decided to move away from keeping stuff in an organization and mostly work on the game myself, it makes sense to change the client splash to something more about myself.  
 
-![](2025-03-23.voxelius-devlog/1742723769120449.png)  
+![](posts/2025-03-23.voxelius-devlog/1742723769120449.png)  
 
 
 ## Player movement
 People complained about not being able to fly around the world, especially when you get stuck somewhere. So I decided to add (for debugging purposes) a flight mode alongside making some very needed improvements to the toggle system.  
 
-![1742562954483141.png](2025-03-23.voxelius-devlog/1742562954483141.png)  
+![1742562954483141.png](posts/2025-03-23.voxelius-devlog/1742562954483141.png)  
 
 You can toggle flight mode by holding `F3` and pressing `F`
 
@@ -52,18 +52,18 @@ You can switch between gamepad and keyboard-mouse input on the fly by holding `F
 
 you should be able to bind buttons and axes with a similar way one binds keys in the configuration. To bind a button, press on the control, then while it's displaying `...`, press the gamepad button. Same thing works with axes, except you should pull it to its limit for the game to recognize the input.  
 
-![1742724559730210.png](2025-03-23.voxelius-devlog/1742724559730210.png)  
+![1742724559730210.png](posts/2025-03-23.voxelius-devlog/1742724559730210.png)  
 
 > **NOTE:** gamepad support is by no means complete, you still can't place or break voxels and switch between slots in the hotbar. I suppose one of the next public test releases should rectify this and fully define all the inputs a player can have for the gamepad.  
 
 ## Server browser overhaul
 The game got a direct connection screen, making the server browser almost fully feature-complete compared to Minecraft.  
 
-![1742724847585580.png](2025-03-23.voxelius-devlog/1742724847585580.png)  
+![1742724847585580.png](posts/2025-03-23.voxelius-devlog/1742724847585580.png)  
 
 The server browser will also now display a warning text and a tooltip when the server bothered by it reports a different protocol version.  
 
-![1742564821961960.png](2025-03-23.voxelius-devlog/1742564821961960.png)
+![1742564821961960.png](posts/2025-03-23.voxelius-devlog/1742564821961960.png)
 
 ## Aggressive caching
 Considering world generation might now be certainly slow, it makes sense for the server (where constant disk usage spikes don't usually correlate with disk degradation) to aggressively cache every generated chunk. To enable this mode, pass `agressive-caching` command-line parameter:  
