--- a/content/posts/2025-04-04.cmm-scanning.md
+++ b/content/posts/2025-04-04.cmm-scanning.md
@@ -7,7 +7,7 @@ One day I was asked by a bloke at work to explain how scanning works from the ha
 
 So here's the diagram:  
 
-![image_2025-03-26_15-40-00.png](2025-04-04.cmm-scanning/image_2025-03-26_15-40-00.png)  
+![image_2025-03-26_15-40-00.png](posts/2025-04-04.cmm-scanning/image_2025-03-26_15-40-00.png)  
 
 - Basically, the CMM starts by looking up a surface at _Ps_ point  
 - After that, it begins moving in the direction of _Vd_  
