--- a/content/posts/2023-08-30.crontab-automation.md
+++ b/content/posts/2023-08-30.crontab-automation.md
@@ -53,4 +53,4 @@ Cron job entries for the server look like this:
 
 And, as evident by the screenshots, the approach works:  
 
-![](2023-08-30.crontab-automation/2023-08-30.11-47.png)
+![](posts/2023-08-30.crontab-automation/2023-08-30.11-47.png)
