--- a/content/posts/2023-11-21.desmos-dsp-fourier.md
+++ b/content/posts/2023-11-21.desmos-dsp-fourier.md
@@ -32,7 +32,7 @@ Lets use a simple cosine wave signal as an example:
 
 Lets plot the continious signal alongside discrete. Continious should look like an envelope filled with vertical lines meaning each sample's height. Let's have a look:  
 
-[![](2023-11-21.desmos-dsp-fourier/dsp-01.svg)](https://www.desmos.com/calculator/curcwmudot)
+[![](posts/2023-11-21.desmos-dsp-fourier/dsp-01.svg)](https://www.desmos.com/calculator/curcwmudot)
 
 ### Shifting gears into the frequency domain
 Okay, well, how do you then turn _this_ into a frequency spectrum? The answer is in the title: you perform a little magic ritual called Fourier Transform:  
@@ -58,7 +58,7 @@ Now, we can combine the two and get just amplitude of each frequency by using a 
 
 Let's plot that spectrum and see what it looks like:  
 
-[![](2023-11-21.desmos-dsp-fourier/dsp-02.svg)](https://www.desmos.com/calculator/saxzfhsflt)
+[![](posts/2023-11-21.desmos-dsp-fourier/dsp-02.svg)](https://www.desmos.com/calculator/saxzfhsflt)
 
 Now would you look at that! It looks exactly how a real DFT spectrum would look like!  
 
@@ -73,7 +73,7 @@ Lets simulate [spectral leakage](https://en.wikipedia.org/wiki/Spectral_leakage)
 
 Now that the frequency value is set to something that really doesn't want to cooperate with DFT, lets take a look how did the graph change:  
 
-[![](2023-11-21.desmos-dsp-fourier/dsp-03.svg)](https://www.desmos.com/calculator/nxcrsubged)  
+[![](posts/2023-11-21.desmos-dsp-fourier/dsp-03.svg)](https://www.desmos.com/calculator/nxcrsubged)  
 
 That certainly looks like spectral leakage to me!  
 
@@ -84,19 +84,19 @@ Lets plot some commonly known signals in frequency domain:
 
     \\[s\left(t\right)=sign\left[\cos\left(2\pi f\_{0}t\right)\right]\\]  
 
-    [![](2023-11-21.desmos-dsp-fourier/dsp-04.svg)](https://www.desmos.com/calculator/ocpgchltpf)
+    [![](posts/2023-11-21.desmos-dsp-fourier/dsp-04.svg)](https://www.desmos.com/calculator/ocpgchltpf)
 
 2. Triangle wave:  
 
     \\[s\left(t\right)=2\cdot\frac{\arccos\left[\cos\left(2\pi f\_{0}t\right)\right]}{\pi}-1\\]  
 
-    [![](2023-11-21.desmos-dsp-fourier/dsp-05.svg)](https://www.desmos.com/calculator/ncfkgrhmri)  
+    [![](posts/2023-11-21.desmos-dsp-fourier/dsp-05.svg)](https://www.desmos.com/calculator/ncfkgrhmri)  
 
 3. Sawtooth wave:  
 
     \\[s\left(t\right)=2\cdot\left[\left(f\_{0}\cdot t\right)\bmod 1\right]-1\\]
 
-    [![](2023-11-21.desmos-dsp-fourier/dsp-06.svg)](https://www.desmos.com/calculator/xseytjetha)
+    [![](posts/2023-11-21.desmos-dsp-fourier/dsp-06.svg)](https://www.desmos.com/calculator/xseytjetha)
 
 ### Conclusion
 So I guess you really _can_ perform DFT in Desmos. It's quite probable that you also can do other kinds of DSP (digital signal processing) there, I just haven't tried it yet, but I sure would! Just, y'know, not right now!  
