--- a/content/posts/2024-06-15.wallpaper.md
+++ b/content/posts/2024-06-15.wallpaper.md
@@ -5,6 +5,6 @@ date: 2024-06-15
 
 > NOTE: as usual, this wallpaper and all its past and future versions are licensed under [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/deed); in short: if you use it somewhere, give credit if it makes sense to do so    
 
-Originally posted in Discord, there was a newer version that is now lost media. I also managed to recover a blender [project](posts/2024-06-15.wallpaper/WP0.blend) with a semi-comprehensive version of the wallpaper; versions might differ and the project file may be messed up in newer versions of blender!!!  
+Originally posted in Discord, there was a newer version that is now lost media. I also managed to recover a blender [project](2024-06-15.wallpaper/WP0.blend) with a semi-comprehensive version of the wallpaper; versions might differ and the project file may be messed up in newer versions of blender!!!  
 
-[![](posts/2024-06-15.wallpaper/clutter-web.jpg)](posts/2024-06-15.wallpaper/clutter_4K_R2.png)  
+[![](2024-06-15.wallpaper/clutter-web.jpg)](2024-06-15.wallpaper/clutter_4K_R2.png)  
