--- a/content/posts/2024-09-16.minecraft-systemd.md
+++ b/content/posts/2024-09-16.minecraft-systemd.md
@@ -103,7 +103,7 @@ title @a title ""
 
 These commands reset the title, print a text, play a sound and display the same exact text as a subtitle. The announcement looks like this:  
 
-![](posts/2024-09-16.minecraft-systemd/2024-09-16_20.24.24.png)  
+![](2024-09-16.minecraft-systemd/2024-09-16_20.24.24.png)  
 
 #### File: [`systemd/announce.sh`](https://github.com/untodesu/nrmc/blob/c85ffa2f4774c8344c16d9ad905a8568f4903f09/systemd/announce.sh)
 ```sh
@@ -129,4 +129,4 @@ The server is still supposed to restart every day, so a bunch of cron jobs is ne
 <br/><br/><br/><br/>
 
 ## The end
-![](posts/2024-09-16.minecraft-systemd/2024-09-16_20-41.png)
+![](2024-09-16.minecraft-systemd/2024-09-16_20-41.png)
