--- a/content/posts/2024-12-16.voxelius-devlog.md
+++ b/content/posts/2024-12-16.voxelius-devlog.md
@@ -18,7 +18,7 @@ date: 2024-12-16
 * Introduced a simple chunk storage format to make player activity persistent throughout server restarts;  
 * The world chunks are only saved if there has been player activity in them which is any kind of voxel change;  
 
-![](posts/2024-12-16.voxelius-devlog/353546187294.png)  
+![](2024-12-16.voxelius-devlog/353546187294.png)  
 
 ## Get Voxelius
  
