--- a/content/posts/2024-12-25.voxelius-devlog.md
+++ b/content/posts/2024-12-25.voxelius-devlog.md
@@ -22,11 +22,11 @@ If you want to enter an empty password (in other words, _disable_ password login
 
 On the client side of things, the server browser edit mode has gained a new input field to the right of the server address field:  
 
-![](posts/2024-12-25.voxelius-devlog/1735108001280144.png)  
+![](2024-12-25.voxelius-devlog/1735108001280144.png)  
 
 And when you try to join a server with an incorrect password, the server kicks you with this kind of message:  
 
-![](posts/2024-12-25.voxelius-devlog/1735108064944361.png)  
+![](2024-12-25.voxelius-devlog/1735108064944361.png)  
 
 
 ### The whitelist
@@ -48,7 +48,7 @@ The first line will allow a player with the username `untodesu` to connect to th
 ## The hotbar
 Since I consider previous release a part of this one, I shall also mention things added in that release as well. A new hotbar HUD element has been added to add visual feedback on what voxel the player is going to place. Currently nothing is rendered inside its slots and the hotbar items are only filled in whenever `ENABLE_EXPERIMENTS` is defined in the build config.
 
-![](posts/2024-12-25.voxelius-devlog/hotbar_screenshot.png)
+![](2024-12-25.voxelius-devlog/hotbar_screenshot.png)
 
 ## The voxel registry
 I completely nuked JSON voxel definitions in favor of a more programmer-friendly approach of using the good old time-tested builder pattern:  
