--- a/content/posts/2025-01-01.voxelius-devlog.md
+++ b/content/posts/2025-01-01.voxelius-devlog.md
@@ -8,7 +8,7 @@ This is a yet another collection of release notes for Voxelius 0.0.1.2501. This 
 ## Collision detection and gravity
 I finally decided to make a semi-significant gameplay change and gave players a collision hull that can now interact with the voxel world. The entire collision detection system is still kind of... weird, I guess? If your velocity is high enough, the system will stop you before you actually touch a voxel's edge which visually looks like you land on a pillow. But anyways it's definitely a system and it works.  
 
-![](posts/2025-01-01.voxelius-devlog/1735735059638357.png)  
+![](2025-01-01.voxelius-devlog/1735735059638357.png)  
 
 ## View rolling
 Since players now can move on the ground, it makes sense to add a visual feedback to when the player moves sideways; and I know just a thing that does it: view rolling! When the player moves sideways, view angles are modified with a custom roll value that is calculated like this:  
@@ -19,14 +19,14 @@ angles[2] = radians(-roll_angle * dot(velocity / max_speed, right_vector))
 
 And the visual result looks really decent and actually gives a Quake/Half-Life feeling to the entire movement system:  
 
-![](posts/2025-01-01.voxelius-devlog/1735735171378001.png)  
+![](2025-01-01.voxelius-devlog/1735735171378001.png)  
 
 ## Actual Quake/GoldSrc movement
 The old movement code was using something one can call an infinite-impulse-response filter to accelerate/decelerate the player according to the wish direction they want to go in. This approach was _very_ framerate-dependent.  
 
 Don't get me wrong, it's still good when you're flying through space and I might just use that for generic flight moving for something like spectator gamemode, but for ground/jump moving I decided to implement movement that is pretty much in my muscular memory and implemented basic quake/goldsrc/source movement into the game. Yes, you can bunnyhop. Yes, it is very fun to do so!! Yes, it will persist as a game feature! And, finally, yes, this movement code may very well just migrate into a TF2-like game I have plans on making!!
 
-![](posts/2025-01-01.voxelius-devlog/1735570429932908.png)  
+![](2025-01-01.voxelius-devlog/1735570429932908.png)  
 
 ## New voxels
 Since I implemented voxel collision to have different touch responses for different voxels, it made sense to add at least two voxels that would have different touch response types.  
@@ -53,17 +53,17 @@ game_voxels::mud = voxel_def::construct("mud", VoxelType::Cube, false, false)
 ### Slime
 I added a slime voxel that is bouncy. When you fall onto it from a height, it bounces you up with 60% of your original vertical velocity applied in the opposite direction.  
 
-![](posts/2025-01-01.voxelius-devlog/1735736207730185.png)  
+![](2025-01-01.voxelius-devlog/1735736207730185.png)  
 
 ### Mud
 An another touch response type is `TOUCH_SINK` which retains your velocity but multiplies it by a factor of sorts. To test that, I added a mud block in which you sink through and it makes your walking speed 50% slower.  
 
-![](posts/2025-01-01.voxelius-devlog/1735736350521326.png)
+![](2025-01-01.voxelius-devlog/1735736350521326.png)
 
 ## Item system
 If you haven't already noticed on the screenshots above, I started working on a new item registry so that the hotbar can actually show what voxel you have selected and what voxel you're going to place.  
 
-![](posts/2025-01-01.voxelius-devlog/1735736350521326.hotbar.png)
+![](2025-01-01.voxelius-devlog/1735736350521326.hotbar.png)
 
 And it does things in a literally the same way as the voxel registry, which has been renamed to `voxel_def` for consistency with `item_def`. To add a new item you also call `construct` and use builder functions to setup your new item:  
 
