--- a/content/posts/2025-08-25.wallpaper.md
+++ b/content/posts/2025-08-25.wallpaper.md
@@ -12,10 +12,10 @@ __ __
 As with all my 3D renders of wallpapers of all sort, I just sat down and had a strike of incredible focusing potential. Now it's 02:50 AM and I have to wake up to go to work tomorrow, but at least I have cool-looking renders:  
 
 ### GMod chaos (`gmodsea01.blend`)
-[![](posts/2025-08-25.wallpaper/gmodsea01-web.jpg)](posts/2025-08-25.wallpaper/gmodsea01.png)  
+[![](2025-08-25.wallpaper/gmodsea01-web.jpg)](2025-08-25.wallpaper/gmodsea01.png)  
 
 ### Base cube deletion (`cubeshatter.blend`)
-[![](posts/2025-08-25.wallpaper/cubeshatter-web.jpg)](posts/2025-08-25.wallpaper/cubeshatter.png)  
+[![](2025-08-25.wallpaper/cubeshatter-web.jpg)](2025-08-25.wallpaper/cubeshatter.png)  
 
 ### Teapot liminality (`teapots.blend`)
-[![](posts/2025-08-25.wallpaper/teapots-web.jpg)](posts/2025-08-25.wallpaper/teapots.png)  
+[![](2025-08-25.wallpaper/teapots-web.jpg)](2025-08-25.wallpaper/teapots.png)  
